@@ -80,10 +80,8 @@ LSB_DISTRIB_DESCRIPTION="Debian GNU/Linux installer"
 # TODO: "lenny" to be replaced by release version number when determined
 LSB_DISTRIB_RELEASE="lenny (installer build $(BUILD_DATE))"
 
-# This keyring is copied into the install image to allow d-i to verify
-# signatures of things it downloads. This is probably temporary, and it
-# will probably later move to a udeb. If your archive uses some other key,
-# you can change this.
+# This keyring is only used to verify udeb downloads using apt. Since the
+# build process does not run as root, apt cannot read /etc/apt/trusted.gpg.
 KEYRING=/usr/share/keyrings/debian-archive-keyring.gpg
 
 # All images that include cdebconf should include symbols needed by these
