@@ -11,8 +11,6 @@ TYPE=bootfloppy-ng
 
 # Release info not needed on boot floppy
 OMIT_RELEASE_INFO=1
-# No gpg fits on a boot floppy.
-KEYRING=
 # No debconf either, so no preseeding.
 PRESEED=
 EXTRAUDEBS=
