@@ -51,6 +51,12 @@ debian-installer (2007xxxx) UNRELEASED; urgency=low
     consistency between udebs included in the initrd and udebs retrieved
     during the installation. See #424640 and #426303.
     Requires net-retriever 1.18.
+  
+  [ Joey Hess ]
+  * Stop including KEYRING onto initrds. Needs base-installer 1.80 and
+    net-retriever 1.17, which use the udeb.
+  * No need to unset KEYRING for floppies anymore. Closes: #423265
+
 
  -- Frans Pop <fjp@debian.org>  Tue, 29 May 2007 02:07:04 +0200
 
